Base game created

--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-<html></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Keyboard clicker</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="Scripts/keyboard.js"></script>
+</head>
+<body>
+    <div id="currencies">
+        <p id="clicks"></p>
+    </div>
+    <div id="keyboard">
+        <div id="row1">
+            <p id="Q">Q</p>
+            <p id="W">W</p>
+            <p id="E">E</p>
+            <p id="R">R</p>
+            <p id="T">T</p>
+            <p id="Y">Y</p>
+            <p id="U">U</p>
+            <p id="I">I</p>
+            <p id="O">O</p>
+            <p id="P">P</p>
+        </div>
+        <div id="row2">
+            <p id="A">A</p>
+            <p id="S">S</p>
+            <p id="D">D</p>
+            <p id="F">F</p>
+            <p id="G">G</p>
+            <p id="H">H</p>
+            <p id="J">J</p>
+            <p id="K">K</p>
+            <p id="L">L</p>
+        </div>
+        <div id="row3">
+            <p id="Z">Z</p>
+            <p id="X">X</p>
+            <p id="C">C</p>
+            <p id="V">V</p>
+            <p id="B">B</p>
+            <p id="N">N</p>
+            <p id="M">M</p>
+        </div>
+    </div>
+</body>
+</html>
