Added æøå and animation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="currencies">
-        <p id="clicks"></p>
+        <p id="clicks">Clicks: 0</p>
     </div>
     <div id="keyboard">
         <div id="row1">
@@ -24,6 +24,7 @@
             <p id="I">I</p>
             <p id="O">O</p>
             <p id="P">P</p>
+            <p id="Å">Å</p>
         </div>
         <div id="row2">
             <p id="A">A</p>
@@ -35,6 +36,8 @@
             <p id="J">J</p>
             <p id="K">K</p>
             <p id="L">L</p>
+            <p id="Æ">Æ</p>
+            <p id="Ø">Ø</p>
         </div>
         <div id="row3">
             <p id="Z">Z</p>
