Click cooldown and key class

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keyboard clicker</title>
     <link rel="stylesheet" href="style.css">
+    <script src="Class/key.js"></script>
     <script src="Scripts/keyboard.js"></script>
 </head>
 <body>
     <div id="currencies">
-        <p id="clicks">Clicks: 0</p>
+        <p id="clicks"></p>
     </div>
     <div id="keyboard">
         <div id="row1">
