limit maxkeys and static key pos

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body>
     <div id="currencies">
         <p id="clicks"></p>
+        <p id="keyAmount"></p>
     </div>
     <div id="keyboard">
-        <div id="row0">
+        <div id="row0" class="row">
             <p id="Q">Q</p>
             <p id="W">W</p>
             <p id="E">E</p>
@@ -27,7 +28,7 @@
             <p id="P">P</p>
             <p id="Å">Å</p>
         </div>
-        <div id="row1">
+        <div id="row1" class="row">
             <p id="A">A</p>
             <p id="S">S</p>
             <p id="D">D</p>
@@ -40,7 +41,7 @@
             <p id="Æ">Æ</p>
             <p id="Ø">Ø</p>
         </div>
-        <div id="row2">
+        <div id="row2" class="row">
             <p id="Z">Z</p>
             <p id="X">X</p>
             <p id="C">C</p>
