Transition to appear and visual letterBonus

--- a/index.html
+++ b/index.html
@@ -11,44 +11,44 @@
 </head>
 <body>
     <div id="currencies">
-        <p id="clicks"></p>
-        <p id="keyAmount"></p>
+        <p id="clicks" class="hidden"></p>
+        <p id="keyAmount" class="hidden"></p>
+    </div>
+    <div id="letterBonus" class="hidden">
+        K
     </div>
     <div id="keyboard">
         <div id="row0" class="row">
-            <p id="Q">Q</p>
-            <p id="W">W</p>
-            <p id="E">E</p>
-            <p id="R">R</p>
-            <p id="T">T</p>
-            <p id="Y">Y</p>
-            <p id="U">U</p>
-            <p id="I">I</p>
-            <p id="O">O</p>
-            <p id="P">P</p>
-            <p id="Å">Å</p>
+            <p class="hidden" id="Q">Q</p>
+            <p class="hidden" id="W">W</p>
+            <p class="hidden" id="E">E</p>
+            <p class="hidden" id="R">R</p>
+            <p class="hidden" id="T">T</p>
+            <p class="hidden" id="Y">Y</p>
+            <p class="hidden" id="U">U</p>
+            <p class="hidden" id="I">I</p>
+            <p class="hidden" id="O">O</p>
+            <p class="hidden" id="P">P</p>
         </div>
         <div id="row1" class="row">
-            <p id="A">A</p>
-            <p id="S">S</p>
-            <p id="D">D</p>
-            <p id="F">F</p>
-            <p id="G">G</p>
-            <p id="H">H</p>
-            <p id="J">J</p>
-            <p id="K">K</p>
-            <p id="L">L</p>
-            <p id="Æ">Æ</p>
-            <p id="Ø">Ø</p>
+            <p class="hidden" id="A">A</p>
+            <p class="hidden" id="S">S</p>
+            <p class="hidden" id="D">D</p>
+            <p class="hidden" id="F">F</p>
+            <p class="hidden" id="G">G</p>
+            <p class="hidden" id="H">H</p>
+            <p class="hidden" id="J">J</p>
+            <p class="hidden" id="K">K</p>
+            <p class="hidden" id="L">L</p>
         </div>
         <div id="row2" class="row">
-            <p id="Z">Z</p>
-            <p id="X">X</p>
-            <p id="C">C</p>
-            <p id="V">V</p>
-            <p id="B">B</p>
-            <p id="N">N</p>
-            <p id="M">M</p>
+            <p class="hidden" id="Z">Z</p>
+            <p class="hidden" id="X">X</p>
+            <p class="hidden" id="C">C</p>
+            <p class="hidden" id="V">V</p>
+            <p class="hidden" id="B">B</p>
+            <p class="hidden" id="N">N</p>
+            <p class="hidden" id="M">M</p>
         </div>
     </div>
 </body>
