Letter bonus function and reset

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <p id="clicks" class="hidden"></p>
         <p id="keyAmount" class="hidden"></p>
     </div>
-    <div id="letterBonus" class="hidden">
-        K
+    <div id="letterBonusBox">
+        <div id="letterBonus" class="hidden"></div>
+        <button id="resetLetterBonus" class="hidden" onclick="resetLetterBonus()">Reset</button>
     </div>
     <div id="keyboard">
         <div id="row0" class="row">
