Combo for letter bonus

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <p id="keyAmount" class="hidden"></p>
     </div>
     <div id="letterBonusBox">
+        <progress class="hidden" id="comboProg" min="0" max="5" value="4"></progress>
+        <p class="hidden" id="comboText">2x</p>
         <div id="letterBonus" class="hidden"></div>
         <button id="resetLetterBonus" class="hidden" onclick="resetLetterBonus()">Reset</button>
     </div>
