removed testing stuff

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="Scripts/keyboard.js"></script>
 </head>
 
-<body onload="makeVisible('menu')">
+<body>
     <div id="menu" class="hidden">
         <button class="active" id="gameButton" onclick="changePage('game')">Keyboard</button>
         <button id="shopButton" onclick="changePage('shop')">Shop</button>
