changed shop to upgrade

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="menu" class="hidden">
         <button class="active" id="gameButton" onclick="changePage('game')">Keyboard</button>
-        <button id="shopButton" onclick="changePage('shop')">Shop</button>
+        <button id="upgradeButton" onclick="changePage('upgrade')">upgrade</button>
     </div>
     <div id="currencies">
         <p id="clicks" class="hidden"></p>
@@ -63,45 +63,45 @@
             </div>
         </div>
     </div>
-    <div id="shop" class="hidden noDisplay">
-        <div id="shopButtons">
-            <button name="clickValue" disabled onclick="shopButton(this, '+', 1)">
+    <div id="upgrade" class="hidden noDisplay">
+        <div id="upgradeButtons">
+            <button name="clickValue" disabled onclick="upgradeButton(this, '+', 1)">
                 <h1>key value +1</h1>
                 <p>select a key first</p>
             </button>
         </div>
-        <div class="keyboard" id="shopKeyboard">
+        <div class="keyboard" id="upgradeKeyboard">
             <div class="row">
-                <p class="hidden" onclick="shopSelect('Q')" id="shopQ">Q</p>
-                <p class="hidden" onclick="shopSelect('W')" id="shopW">W</p>
-                <p class="hidden" onclick="shopSelect('E')" id="shopE">E</p>
-                <p class="hidden" onclick="shopSelect('R')" id="shopR">R</p>
-                <p class="hidden" onclick="shopSelect('T')" id="shopT">T</p>
-                <p class="hidden" onclick="shopSelect('Y')" id="shopY">Y</p>
-                <p class="hidden" onclick="shopSelect('U')" id="shopU">U</p>
-                <p class="hidden" onclick="shopSelect('I')" id="shopI">I</p>
-                <p class="hidden" onclick="shopSelect('O')" id="shopO">O</p>
-                <p class="hidden" onclick="shopSelect('P')" id="shopP">P</p>
+                <p class="hidden" onclick="upgradeSelect('Q')" id="upgradeQ">Q</p>
+                <p class="hidden" onclick="upgradeSelect('W')" id="upgradeW">W</p>
+                <p class="hidden" onclick="upgradeSelect('E')" id="upgradeE">E</p>
+                <p class="hidden" onclick="upgradeSelect('R')" id="upgradeR">R</p>
+                <p class="hidden" onclick="upgradeSelect('T')" id="upgradeT">T</p>
+                <p class="hidden" onclick="upgradeSelect('Y')" id="upgradeY">Y</p>
+                <p class="hidden" onclick="upgradeSelect('U')" id="upgradeU">U</p>
+                <p class="hidden" onclick="upgradeSelect('I')" id="upgradeI">I</p>
+                <p class="hidden" onclick="upgradeSelect('O')" id="upgradeO">O</p>
+                <p class="hidden" onclick="upgradeSelect('P')" id="upgradeP">P</p>
             </div>
             <div class="row">
-                <p class="hidden" onclick="shopSelect('A')" id="shopA">A</p>
-                <p class="hidden" onclick="shopSelect('S')" id="shopS">S</p>
-                <p class="hidden" onclick="shopSelect('D')" id="shopD">D</p>
-                <p class="hidden" onclick="shopSelect('F')" id="shopF">F</p>
-                <p class="hidden" onclick="shopSelect('G')" id="shopG">G</p>
-                <p class="hidden" onclick="shopSelect('H')" id="shopH">H</p>
-                <p class="hidden" onclick="shopSelect('J')" id="shopJ">J</p>
-                <p class="hidden" onclick="shopSelect('K')" id="shopK">K</p>
-                <p class="hidden" onclick="shopSelect('L')" id="shopL">L</p>
+                <p class="hidden" onclick="upgradeSelect('A')" id="upgradeA">A</p>
+                <p class="hidden" onclick="upgradeSelect('S')" id="upgradeS">S</p>
+                <p class="hidden" onclick="upgradeSelect('D')" id="upgradeD">D</p>
+                <p class="hidden" onclick="upgradeSelect('F')" id="upgradeF">F</p>
+                <p class="hidden" onclick="upgradeSelect('G')" id="upgradeG">G</p>
+                <p class="hidden" onclick="upgradeSelect('H')" id="upgradeH">H</p>
+                <p class="hidden" onclick="upgradeSelect('J')" id="upgradeJ">J</p>
+                <p class="hidden" onclick="upgradeSelect('K')" id="upgradeK">K</p>
+                <p class="hidden" onclick="upgradeSelect('L')" id="upgradeL">L</p>
             </div>
             <div class="row">
-                <p class="hidden" onclick="shopSelect('Z')" id="shopZ">Z</p>
-                <p class="hidden" onclick="shopSelect('X')" id="shopX">X</p>
-                <p class="hidden" onclick="shopSelect('C')" id="shopC">C</p>
-                <p class="hidden" onclick="shopSelect('V')" id="shopV">V</p>
-                <p class="hidden" onclick="shopSelect('B')" id="shopB">B</p>
-                <p class="hidden" onclick="shopSelect('N')" id="shopN">N</p>
-                <p class="hidden" onclick="shopSelect('M')" id="shopM">M</p>
+                <p class="hidden" onclick="upgradeSelect('Z')" id="upgradeZ">Z</p>
+                <p class="hidden" onclick="upgradeSelect('X')" id="upgradeX">X</p>
+                <p class="hidden" onclick="upgradeSelect('C')" id="upgradeC">C</p>
+                <p class="hidden" onclick="upgradeSelect('V')" id="upgradeV">V</p>
+                <p class="hidden" onclick="upgradeSelect('B')" id="upgradeB">B</p>
+                <p class="hidden" onclick="upgradeSelect('N')" id="upgradeN">N</p>
+                <p class="hidden" onclick="upgradeSelect('M')" id="upgradeM">M</p>
             </div>
         </div>
     </div>
