--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
     <div id="menu" class="hidden">
         <button class="active" id="gameButton" onclick="changePage('game')">Keyboard</button>
         <button id="upgradeButton" onclick="changePage('upgrade')">upgrade</button>
-        <button id="perkPageButton" onclick="changePage('perkPage')">perks</button>
+        <button id="perkPageButton" onclick="changePage('perkPage')" disabled>???</button>
+        <button id="" onclick="changePage('')" disabled>???</button>
+        <button id="" onclick="changePage('')" disabled>???</button>
+        <button id="" onclick="changePage('')" disabled>???</button>
+        <button id="" onclick="changePage('')" disabled>???</button>
+        <button id="" onclick="changePage('')" disabled>???</button>
+        <button id="" onclick="changePage('')" disabled>???</button>
+        <button id="" onclick="changePage('')" disabled>???</button>
+        <button id="" onclick="changePage('')" disabled>???</button>
+        <button id="" onclick="changePage('')" disabled>???</button>
     </div>
     <div id="currencies">
         <p id="clicks" class="hidden"></p>
